--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "concurrently": "^7.2.2",
     "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.6",
-    "mongoose": "^6.3.6"
+    "mongoose": "^6.3.6",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
