--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "JS",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.7.2",
     "body-parser": "^1.20.0",
     "concurrently": "^7.2.2",
     "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.6",
     "mongoose": "^6.3.6",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-app-rewired": "^2.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
