--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "redux": "^4.2.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.4",
     "web3-utils": "^1.7.4"
