--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "@openzeppelin/contracts": "^4.7.2",
     "body-parser": "^1.20.0",
     "concurrently": "^7.2.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.6",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
